[package]
name = "compe-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
proconio = "0.5.0"

[[bin]]
name = "sandbox_main"
path = "src/sandbox/main.rs"

[[bin]]
name = "ABS_practiceA"
path = "src/ABS/practiceA.rs"

[[bin]]
name = "ABS_086A"
path = "src/ABS/086A.rs"

[[bin]]
name = "ABS_081A"
path = "src/ABS/081A.rs"

[[bin]]
name = "ABS_081B"
path = "src/ABS/081B.rs"

[[bin]]
name = "ABS_087B"
path = "src/ABS/087B.rs"

[[bin]]
name = "ABS_083B"
path = "src/ABS/083B.rs"

[[bin]]
name = "ABS_088B"
path = "src/ABS/088B.rs"

[[bin]]
name = "ABS_085B"
path = "src/ABS/085B.rs"

[[bin]]
name = "ABS_085C"
path = "src/ABS/085C.rs"

[[bin]]
name = "ABS_049C"
path = "src/ABS/049C.rs"

[[bin]]
name = "ABS_086C"
path = "src/ABS/086C.rs"
