[package]
name = "compe-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
proconio = "0.5.0"
itertools = "0.14"
ac-library-rs = "0.1"

[[bin]]
name = "sandbox_main"
path = "src/sandbox/main.rs"

[[bin]]
name = "ABS_practiceA"
path = "src/ABS/practiceA.rs"

[[bin]]
name = "ABS_086A"
path = "src/ABS/086A.rs"

[[bin]]
name = "ABS_081A"
path = "src/ABS/081A.rs"

[[bin]]
name = "ABS_081B"
path = "src/ABS/081B.rs"

[[bin]]
name = "ABS_087B"
path = "src/ABS/087B.rs"

[[bin]]
name = "ABS_083B"
path = "src/ABS/083B.rs"

[[bin]]
name = "ABS_088B"
path = "src/ABS/088B.rs"

[[bin]]
name = "ABS_085B"
path = "src/ABS/085B.rs"

[[bin]]
name = "ABS_085C"
path = "src/ABS/085C.rs"

[[bin]]
name = "ABS_049C"
path = "src/ABS/049C.rs"

[[bin]]
name = "ABS_086C"
path = "src/ABS/086C.rs"

[[bin]]
name = "tenkei90_004"
path = "src/tenkei90/004.rs"

[[bin]]
name = "tenkei90_010"
path = "src/tenkei90/010.rs"

[[bin]]
name = "tenkei90_022"
path = "src/tenkei90/022.rs"

[[bin]]
name = "tenkei90_024"
path = "src/tenkei90/024.rs"

[[bin]]
name = "tenkei90_027"
path = "src/tenkei90/027.rs"

[[bin]]
name = "tenkei90_033"
path = "src/tenkei90/033.rs"

[[bin]]
name = "tenkei90_055"
path = "src/tenkei90/055.rs"

[[bin]]
name = "tenkei90_061"
path = "src/tenkei90/061.rs"

[[bin]]
name = "tenkei90_067"
path = "src/tenkei90/067.rs"

[[bin]]
name = "tenkei90_078"
path = "src/tenkei90/078.rs"

[[bin]]
name = "tenkei90_002"
path = "src/tenkei90/002.rs"

[[bin]]
name = "tenkei90_007"
path = "src/tenkei90/007.rs"

[[bin]]
name = "tenkei90_014"
path = "src/tenkei90/014.rs"

[[bin]]
name = "tenkei90_016"
path = "src/tenkei90/016.rs"

[[bin]]
name = "tenkei90_018"
path = "src/tenkei90/018.rs"

[[bin]]
name = "tenkei90_020"
path = "src/tenkei90/020.rs"

[[bin]]
name = "tenkei90_032"
path = "src/tenkei90/032.rs"

[[bin]]
name = "tenkei90_038"
path = "src/tenkei90/038.rs"

[[bin]]
name = "tenkei90_044"
path = "src/tenkei90/044.rs"

[[bin]]
name = "tenkei90_046"
path = "src/tenkei90/046.rs"

[[bin]]
name = "tenkei90_048"
path = "src/tenkei90/048.rs"

[[bin]]
name = "tenkei90_050"
path = "src/tenkei90/050.rs"

[[bin]]
name = "tenkei90_052"
path = "src/tenkei90/052.rs"

[[bin]]
name = "tenkei90_064"
path = "src/tenkei90/064.rs"

[[bin]]
name = "tenkei90_069"
path = "src/tenkei90/069.rs"

[[bin]]
name = "tenkei90_075"
path = "src/tenkei90/075.rs"

[[bin]]
name = "tenkei90_076"
path = "src/tenkei90/076.rs"

[[bin]]
name = "tenkei90_079"
path = "src/tenkei90/079.rs"

[[bin]]
name = "tenkei90_082"
path = "src/tenkei90/082.rs"

[[bin]]
name = "tenkei90_084"
path = "src/tenkei90/084.rs"
